// 🏋️ 練習場（LiveFit）的 ERD —— DBML 語法範本
// 考場要你自己畫校園版：把這份當語法字典，貼到 https://dbdiagram.io 看圖
// 語法三件套：Table 定義欄位、[pk] 標主鍵、Ref: 連外鍵（> 的尖端指向「一」的那邊）

Table USER {
  id uuid [pk]
  name varchar(50)
  email varchar(320) [unique]
  role varchar(20)
  created_at timestamp
  updated_at timestamp
}

Table SKILL {
  id uuid [pk]
  name varchar(50) [unique]
}

Table COURSE {
  id uuid [pk]
  user_id uuid
  skill_id uuid
  name varchar(100)
  description text
  start_at timestamp
  end_at timestamp
  max_participants int
  meeting_url varchar(2048) [null, note: '演進題加的欄位']
}

Ref: COURSE.user_id > USER.id
Ref: COURSE.skill_id > SKILL.id
